<package>
  <name>rotors_gazebo_plugins</name>
  <version>4.0.6</version>
  <description>The rotors_gazebo_plugins package</description>

  <maintainer email="giuseppe.silano@unisannio.it">Giuseppe Silano</maintainer>
  <maintainer email="luigi.iannelli@unisannio.it">Luigi Iannelli</maintainer>

  <author>Giuseppe Silano</author>
  <author>Emanuele Aucone</author>
  <author>Benjamin Rodriguez</author>
  <author>Luigi Iannelli</author>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/gsilano/CrazyS</url>
  <url type="bugtracker">https://github.com/gsilano/CrazyS/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>libgoogle-glog-dev</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rotors_comm</build_depend>
  <build_depend>rotors_control</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>protobuf-dev</build_depend>


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>cv_bridge</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>libgoogle-glog-dev</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>octomap_ros</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rotors_comm</run_depend>
  <run_depend>rotors_control</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>yaml-cpp</run_depend>

</package>
