<package format="2">
  <name>rotors_gazebo_plugins</name>
  <version>2.2.3</version>
  <description>The rotors_gazebo_plugins package</description>

  <maintainer email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</maintainer>
  <maintainer email="michael.pantic@mavt.ethz.ch">Michael Pantic</maintainer>
  <maintainer email="mina.kamel@mavt.ethz.ch">Mina Kamel</maintainer>

  <author>Fadri Furrer</author>
  <author>Michael Burri</author>
  <author>Mina Kamel</author>
  <author>Janosch Nikolic</author>
  <author>Markus Achtelik</author>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/ethz-asl/rotors_simulator</url>
  <url type="bugtracker">https://github.com/ethz-asl/rotors_simulator/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <depend>cmake_modules</depend>
  <depend>cv_bridge</depend>
  <depend>gazebo</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>protobuf-dev</depend>
  <depend>mavros</depend>
  <depend>mav_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap_ros</depend>
  <depend>octomap</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>rotors_comm</depend>
  <depend>rotors_control</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>yaml-cpp</depend>

</package>
