<?xml version="1.0"?>
<package>
  <name>rotors_hil_interface</name>
  <version>2.2.3</version>
  <description>RotorS Hardware-in-the-loop interface package</description>

  <maintainer email="pvechersky@gmail.com">Pavel Vechersky</maintainer>
  <maintainer email="timo.hinzmann@gmail.com">Timo Hinzmann</maintainer>

  <author>Pavel Vechersky</author>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/ethz-asl/rotors_simulator</url>
  <url type="bugtracker">https://github.com/ethz-asl/rotors_simulator/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>mavros</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
