<package>
  <name>rotors_joy_interface</name>
  <version>2.0.1</version>
  <description>The rotors_joy_interface package to control MAVs with a joystick</description>

  <maintainer email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</maintainer>

  <author>Fadri Furrer</author>
  <author>Michael Burri</author>
  <author>Mina Kamel</author>
  <author>Janosch Nikolic</author>
  <author>Markus Achtelik</author>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/ethz-asl/rotors_simulator</url>
  <url type="bugtracker">https://github.com/ethz-asl/rotors_simulator/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>trajectory_msgs</run_depend>

</package>
